修改了前端页面以及用户登陆

--- a/src/main/resources/templates/products/add.html
+++ b/src/main/resources/templates/products/add.html
@@ -82,6 +82,12 @@
 						   placeholder="">
 				</div>
 
+				<div class="form-group">
+					<label>生产重量</label>
+					<input name="weight" type="text" class="form-control"
+						   placeholder="">
+				</div>
+
 
 				<div class="form-group">
 					<label>创建日期</label>
