商品生产写入rfid设备，添加热启动

--- a/src/main/resources/templates/products/add.html
+++ b/src/main/resources/templates/products/add.html
@@ -96,7 +96,7 @@
 				</div>
 
 				<div class="form-group">
-					<label>发送公司</label>
+					<label>生产公司</label>
 					<!--提交的是Company的id-->
 					<select class="form-control" name="companyId">
 						<option th:each="company:${companies}"
