--- a/src/main/resources/templates/commons/bar.html
+++ b/src/main/resources/templates/commons/bar.html
@@ -24,7 +24,7 @@
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link active"
-                   th:class="${activeUri=='success.html'?'nav-link active':'nav-link'}"
+                   th:class="${activeUri=='suceess.html'?'nav-link active':'nav-link'}"
                    href="#" th:href="@{/success.html}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
                         <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
@@ -36,7 +36,7 @@
 
             <li class="nav-item">
                 <a class="nav-link active" href="#" th:href="@{/product}"
-                th:class="${activeUri=='product'?'nav-link active':'nav-link'}">
+                th:class="${activeUri=='/product'?'nav-link active':'nav-link'}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users">
                         <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
                         <circle cx="9" cy="7" r="4"></circle>
@@ -48,7 +48,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link active" href="#" th:href="@{/orders}"
-                   th:class="${activeUri=='product'?'nav-link active':'nav-link'}">
+                   th:class="${activeUri=='/orders'?'nav-link active':'nav-link'}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users">
                         <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
                         <circle cx="9" cy="7" r="4"></circle>
@@ -61,7 +61,7 @@
 
             <li class="nav-item">
                 <a class="nav-link active" href="#" th:href="@{/send}"
-                   th:class="${activeUri=='send'?'nav-link active':'nav-link'}">
+                   th:class="${activeUri=='/send'?'nav-link active':'nav-link'}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users">
                         <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
                         <circle cx="9" cy="7" r="4"></circle>
