--- a/src/main/resources/templates/orders/send.html
+++ b/src/main/resources/templates/orders/send.html
@@ -51,7 +51,7 @@
 <div class="container-fluid">
     <div class="row">
         <!--引入侧边栏-->
-        <div th:replace="commons/bar::#sidebar(activeUri='/orders')"></div>
+        <div th:replace="commons/bar::#sidebar(activeUri='/send')"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
             <!--需要区分是员工修改还是添加；-->
@@ -65,7 +65,7 @@
                 <input type="hidden" name="id"/>
                 -->
                 <div class="form-group">
-                    <label>productId</label>
+                    <label>casId</label>
                     <input name="productId" type="text" class="form-control"
                            placeholder="1">
                 </div>
